# shuttle-template-yew

./: .gitignore  .ignore  Cargo.toml  License.txt  README.md  Shuttle.toml  justfile
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/assets/: screen.css
frontend/src/: main.rs
server/: .ignore  Cargo.toml
server/src/: main.rs
server/src/lib/: lib.rs  startup.rs  telemetry.rs
server/src/lib/routes/: health_check.rs  mod.rs
server/tests/api/: health_check.rs  helpers.rs  main.rs
