# shuttle-template-yew workspace definition

[workspace]
members = [ "server", "frontend" ]
default-members = ["server"]
resolver = "3"

[workspace.package]
version = "4.0.1"
edition = "2024"
description = "Template full stack app using the Yew web framework for Rust"
authors = ["Jeffery D Mitchell", "<crusty-rustacean@jeff-mitchell.dev>"]
readme = "README.md"
repository = "https://github.com/sentinel1909/shuttle-template-yew.git"
license = "MIT"
publish = false
