[package]
name = "frontend"
version = "2.44.0"
edition = "2021"
description = "Template frontend app using the Yew web framework for Rust"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeffmitchelldev.com>"]
repository = "https://github.com/sentinel1909/shuttle-template-yew"
license = 'MIT'
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = [ "csr" ] }
