[package]
name = "frontend"
version = "3.0.1"
edition = "2021"
description = "Template frontend app using the Yew web framework for Rust"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeffmitchelldev.com>"]
repository = "https://github.com/sentinel1909/shuttle-template-yew"
license = 'MIT'
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
log = "0.4.22"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = [ "csr" ] }
