[package]
name = "frontend"
version.workspace = true
edition.workspace = true
description.workspace = true 
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
log = "0.4.22"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = [ "csr" ] }
