[package]
name = "shuttle-template-yew-server"
version = "3.0.0"
edition = "2021"
description = "Template frontend app using the Yew web framework for Rust"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeffmitchelldev.com>"]
repository = "https://github.com/sentinel1909/shuttle-template-yew"
license = 'MIT'
publish = false

[dependencies]
axum = "0.7.5"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tower-http = { version = "0.5.2", features = [ "fs"] }
