[package]
name = "shuttle-template-yew-server"
version = "3.0.1"
edition = "2021"
description = "Template frontend app using the Yew web framework for Rust"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeffmitchelldev.com>"]
repository = "https://github.com/sentinel1909/shuttle-template-yew"
license = 'MIT'
publish = false

[dependencies]
axum = "0.8.4"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
tower-http = { version = "0.6.6", features = [ "fs"] }
