[package]
name = "server"
version.workspace = true
edition.workspace = true
description.workspace = true 
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "server_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
shuttle-axum = "0.55.0"
shuttle-runtime = { version = "0.55.0", default-features = false }
tokio = { version = "1.45.1", features = [ "net" ] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "request-id", "trace", "util"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.20", features = [ "json" ] }
